update screencast links

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -34,10 +34,10 @@
       <a href="https://www.youtube.com/watch?v=p9qzUdkthD4" target="_blank">1. Installing the plugin</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=lf5FzcwAhdc&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">2. Create and publish sliders</a>
+      <a href="https://www.youtube.com/watch?v=Hd54x3GMFlA&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">2. Create and publish sliders</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=Y7NeYK3QBuQ&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">3. Create sliders from posts</a>
+      <a href="https://www.youtube.com/watch?v=LARRTKJrz8U&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">3. Create sliders from posts</a>
     </li>
     <li>
       <a href="https://www.youtube.com/watch?v=Bj8xSH-sScY&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">4. Create sliders from galleries</a>
@@ -46,16 +46,16 @@
       <a href="https://www.youtube.com/watch?v=LVvn-hv0A88&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">5. Adding thumbnails</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=IxqLUNS2BCk&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">6. Adding layerss</a>
+      <a href="https://www.youtube.com/watch?v=3jS0k7ArKOw&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">6. Adding layerss</a>
     </li>
     <li>
       <a href="https://www.youtube.com/watch?v=y_XeEjplSdo&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">7. Adding custom CSS</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=AzwZvTU1wKI&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">8. Working with breakpoints</a>
+      <a href="https://www.youtube.com/watch?v=LKcpUz6K70w&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">8. Working with breakpoints</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=p9Buf6BrF3k&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">9. Import and Export sliders</a>
+      <a href="https://www.youtube.com/watch?v=CoBpGNGj3G8&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">9. Import and Export sliders</a>
     </li>
   </ul>
 
@@ -162,7 +162,7 @@
     section, which allows you to add text or any HTML content inside the thumbnails.
   </p>
   <p>If you want to add both text and an image, you can use the <code>[sp_thumbnail_image]</code> shortcode to insert the thumbnail image loaded in the <i>Thumbnail Image</i> field inside the thumbnail content. You could also manually create the image by using HTML.</p>
-  <p>Thumbnail images can also be created automatically by checking the <i>Auto Thumbnail Images</i> option from the <i>Thumbnails</i> sidebar panel. The <i>Thumbnail Image Size</i> option from the same sidebar panel allows you to select what image version will be loaded as a thumbnail. If you would like to use a different size than those that are available, you can use a separate plugin that will allow you to create additional size versions for the images.</p>
+  <p>Thumbnail images can also be created automatically by checking the <i>Auto Thumbnail Images</i> option from the <i>Thumbnails</i> sidebar panel. The <i>Thumbnail Image Size</i> option from the same sidebar panel allows you to select what image version will be loaded as a thumbnail. If you would like to use a different size than those that are available, you can use a plugin, like <a href="https://wordpress.org/plugins/simple-image-sizes/">Simple Image Sizes</a>, that will allow you to create additional size versions for the images.</p>
 
   <h5 id="layers-editor">Layers editor</h5>
   <a href="assets/images/layers-editor.png">
@@ -1578,14 +1578,10 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
     The support consists in the slider's ability to control the videos automatically (i.e., pause the video when the slide is closed, play the video when the slide is opened, etc.).
   </p>
   <p>
-    In addition to these supported video types, you can add any other video, but you will also need to add your own code for implementing the automatic handling.
-  </p>
-  <p>
     Videos can be added in the
     <i>Layers</i>
     editor, as
-    <i>Video Layers</i>
-    . This type of layer provide a field where you simply need to put the iframe embed, in the case of YouTube and Vimeo videos, or the HTML code in the case of HTML5 videos.
+    <i>Video Layers</i>.
   </p>
   <p>
     <i>Example:</i>
@@ -1702,9 +1698,9 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
   </p>
 
   <h2 id="changelog">12. Changelog</h2>
-  <p><strong>v. 1.0.0</strong> (20 May 14)</p>
+  <p><strong>v. 4.0.0</strong> (27 November 14)</p>
   <ul>
-    <li>initial release</li>
+    <li>New Slider Pro version is released</li>
   </ul>
 
   <div class="main-menu">
