fix 'sliderpro' typo in docs

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -563,7 +563,7 @@
     <img src="assets/images/custom-css.png"></a>
   <p>
     You could use a general selector, like
-    <i>.sliderpro</i>
+    <i>.slider-pro</i>
     if you want to target all your slider instances.
   </p>
 
