--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -852,12 +852,12 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
   <pre>
 [sliderpro id="1" width="700" aspect_ratio="2" visible_size="70%"]
     [sliderpro_slide index="1"]
-        [sliderpro_slide_element name="main_image_source"]path/to/new_image.jpg[/sliderpro_slide_element]
+        [sliderpro_slide_element name="main_image_source"] path/to/new_image.jpg [/sliderpro_slide_element]
     [/sliderpro_slide]
     [sliderpro_slide]
-        [sliderpro_slide_element name="main_image_source"]path/to/image.jpg[/sliderpro_slide_element]
-        [sliderpro_slide_element name="link"]http://bqworks.com/sliderpro/[/sliderpro_slide_element]
-        [sliderpro_slide_element name="layer" position="center" show_transition="right"]some layer content[/sliderpro_slide_element]
+        [sliderpro_slide_element name="main_image_source"] path/to/image.jpg [/sliderpro_slide_element]
+        [sliderpro_slide_element name="main_image_link"] http://bqworks.com/sliderpro/ [/sliderpro_slide_element]
+        [sliderpro_slide_element name="layer" position="center" show_transition="right"] some layer content [/sliderpro_slide_element]
     [/sliderpro_slide]
 [/sliderpro]
 </pre>
@@ -884,10 +884,24 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
     <li>main_image_alt</li>
     <li>main_image_title</li>
     <li>main_image_retina_source</li>
-    <li>link_url</li>
-    <li>link_title</li>
+    <li>main_image_small</li>
+    <li>main_image_medium</li>
+    <li>main_image_large</li>
+    <li>main_image_retina_small</li>
+    <li>main_image_retina_medium</li>
+    <li>main_image_retina_large</li>
+    <li>main_image_link</li>
+    <li>main_image_link_title</li>
+    <li>caption</li>
     <li>layer</li>
     <li>html</li>
+    <li>thumbnail_source</li>
+    <li>thumbnail_alt</li>
+    <li>thumbnail_title</li>
+    <li>thumbnail_retina_source</li>
+    <li>thumbnail_link</li>
+    <li>thumbnail_link_title</li>
+    <li>thumbnail_content</li>
   </ul>
 
   <p>
@@ -898,9 +912,9 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
   <pre>
 [sliderpro id="99" width="960" height="400" visible_size="70%"]
     [sliderpro_slide content_type="posts" posts_post_types="post,page" posts_taxonomies="tag|design;tag|development;tag|planning"]
-        [sliderpro_slide_element name="main_image_source"][sp_image_src][/sliderpro_slide_element]
-        [sliderpro_slide_element name="main_image_alt"][sp_image_alt][/sliderpro_slide_element]
-        [sliderpro_slide_element name="link_url"][sp_link_url][/sliderpro_slide_element]
+        [sliderpro_slide_element name="main_image_source"] [sp_image_src] [/sliderpro_slide_element]
+        [sliderpro_slide_element name="main_image_alt"] [sp_image_alt] [/sliderpro_slide_element]
+        [sliderpro_slide_element name="main_image_link"] [sp_link_url] [/sliderpro_slide_element]
     [/sliderpro_slide]
 [/sliderpro]
 </pre>
