--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -14,7 +14,7 @@
     Slider Pro - by
     <a href="http://bqworks.com/">bqworks</a>
   </h1>
-  <p> <em><strong>Version 4.0.1</strong></em> 
+  <p> <em><strong>Version 4.0.2</strong></em> 
   </p>
   <p>Hi, and thank you for purchasing Slider Pro!</p>
   <p>
@@ -1712,6 +1712,10 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
   </p>
 
   <h2 id="changelog">12. Changelog</h2>
+  <p><strong>v. 4.0.2</strong> (3 December 14)</p>
+  <ul>
+    <li>minor fixes for layers</li>
+  </ul>
   <p><strong>v. 4.0.1</strong> (2 December 14)</p>
   <ul>
     <li>a few minor fixes</li>
