--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -14,7 +14,7 @@
     Slider Pro - by
     <a href="http://bqworks.com/">bqworks</a>
   </h1>
-  <p> <em><strong>Version 4.0.3</strong></em> 
+  <p> <em><strong>Version 4.0.4</strong></em> 
   </p>
   <p>Hi, and thank you for purchasing Slider Pro!</p>
   <p>
@@ -1727,6 +1727,13 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
   </p>
 
   <h2 id="changelog">12. Changelog</h2>
+  <p><strong>v. 4.0.4</strong> (14 December 14)</p>
+  <ul>
+    <li>improve retina support</li>
+    <li>add 'sliderpro_lightbox_options' filter hook</li>
+    <li>fix lightbox appearance in admin preview</li>
+    <li>fix conflict with MooTools script</li>
+  </ul>
   <p><strong>v. 4.0.3</strong> (7 December 14)</p>
   <ul>
     <li>CSS changes for arrows and thumbnail pointers, to improve cross-browser consistency</li>
