--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -14,7 +14,7 @@
     Slider Pro - by
     <a href="http://bqworks.com/">bqworks</a>
   </h1>
-  <p> <em><strong>Version 4.0.4</strong></em> 
+  <p> <em><strong>Version 4.1.0</strong></em> 
   </p>
   <p>Hi, and thank you for purchasing Slider Pro!</p>
   <p>
@@ -1727,6 +1727,15 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
   </p>
 
   <h2 id="changelog">12. Changelog</h2>
+  <p><strong>v. 4.1.0</strong> (31 January 15)</p>
+  <ul>
+    <li>added the option to specify a target for links</li>
+    <li>fixed navigation in Chrome on machines with touch-enabled monitors</li>
+    <li>fixed automatic video control</li>
+    <li>fixed deep linking bug</li>
+    <li>fixed unintended panel dragging in the admin area</li>
+    <li>other minor fixes and improvements</li>
+  </ul>
   <p><strong>v. 4.0.4</strong> (14 December 14)</p>
   <ul>
     <li>improve retina support</li>
