--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -14,7 +14,7 @@
     Slider Pro - by
     <a href="http://bqworks.com/">bqworks</a>
   </h1>
-  <p> <em><strong>Version 4.1.1</strong></em> 
+  <p> <em><strong>Version 4.2.0</strong></em> 
   </p>
   <p>Hi, and thank you for purchasing Slider Pro!</p>
   <p>
@@ -1727,6 +1727,12 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
   </p>
 
   <h2 id="changelog">12. Changelog</h2>
+  <p><strong>v. 4.2.0</strong> (3 October 15)</p>
+  <ul>
+    <li>fixed some compatibility issues with WordPress 4.3</li>
+    <li>added option to use the name of the slider as the id attribute</li>
+    <li>added option to scale up images more than their original size</li>
+  </ul>
   <p><strong>v. 4.1.1</strong> (18 March 15)</p>
   <ul>
     <li>add possibility to load JavaScript files manually</li>
