--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -14,7 +14,7 @@
     Slider Pro - by
     <a href="http://bqworks.com/">bqworks</a>
   </h1>
-  <p> <em><strong>Version 4.2.1</strong></em> 
+  <p> <em><strong>Version 4.3.0</strong></em> 
   </p>
   <p>Hi, and thank you for purchasing Slider Pro!</p>
   <p>
@@ -1727,6 +1727,11 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
   </p>
 
   <h2 id="changelog">12. Changelog</h2>
+  <p><strong>v. 4.3.0</strong> (14 November 15)</p>
+  <ul>
+    <li>edited the plugin update API for better integration with the latest WordPress versions</li>
+    <li>fixed the fullscreen button for YouTube and Vimeo videos</li>
+  </ul>
   <p><strong>v. 4.2.1</strong> (29 October 15)</p>
   <ul>
     <li>fixed the initial scaling of the layers</li>
