fix a few documentation typos

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -894,12 +894,12 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
     <li>main_image_alt</li>
     <li>main_image_title</li>
     <li>main_image_retina_source</li>
-    <li>main_image_small</li>
-    <li>main_image_medium</li>
-    <li>main_image_large</li>
-    <li>main_image_retina_small</li>
-    <li>main_image_retina_medium</li>
-    <li>main_image_retina_large</li>
+    <li>main_image_small_source</li>
+    <li>main_image_medium_source</li>
+    <li>main_image_large_source</li>
+    <li>main_image_retina_small_source</li>
+    <li>main_image_retina_medium_source</li>
+    <li>main_image_retina_large_source</li>
     <li>main_image_link</li>
     <li>main_image_link_title</li>
     <li>caption</li>
