--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -46,7 +46,7 @@
       <a href="https://www.youtube.com/watch?v=LVvn-hv0A88&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">5. Adding thumbnails</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=3jS0k7ArKOw&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">6. Adding layerss</a>
+      <a href="https://www.youtube.com/watch?v=3jS0k7ArKOw&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">6. Adding layers</a>
     </li>
     <li>
       <a href="https://www.youtube.com/watch?v=y_XeEjplSdo&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">7. Adding custom CSS</a>
