--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -12,7 +12,7 @@
 <body>
   <h1>
     Slider Pro - by
-    <a href="http://bqworks.com/">bqworks</a>
+    <a href="http://bqworks.net/">bqworks</a>
   </h1>
   <p> <em><strong>Version 4.6</strong></em> 
   </p>
@@ -818,7 +818,7 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
     [/sliderpro_slide]
     [sliderpro_slide]
         [sliderpro_slide_element name="main_image_source"] path/to/image.jpg [/sliderpro_slide_element]
-        [sliderpro_slide_element name="main_image_link"] http://bqworks.com/sliderpro/ [/sliderpro_slide_element]
+        [sliderpro_slide_element name="main_image_link"] http://bqworks.net/sliderpro/ [/sliderpro_slide_element]
         [sliderpro_slide_element name="layer" position="center" show_transition="right"] some layer content [/sliderpro_slide_element]
     [/sliderpro_slide]
 [/sliderpro]
