update video tutorial links

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -25,31 +25,28 @@
   </p>
   <ul class="video-tutorials-list">
     <li>
-      <a href="https://www.youtube.com/watch?v=p9qzUdkthD4" target="_blank">1. Installing the plugin</a>
+      <a href="http://bqworks.net/slider-pro/screencasts/#simple-slider" target="_blank">1. Create and publish sliders</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=Hd54x3GMFlA&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">2. Create and publish sliders</a>
+      <a href="http://bqworks.net/slider-pro/screencasts/#slider-from-posts" target="_blank">2. Create sliders from posts</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=LARRTKJrz8U&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">3. Create sliders from posts</a>
+      <a href="http://bqworks.net/slider-pro/screencasts/#slider-from-gallery" target="_blank">3. Create sliders from galleries</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=Bj8xSH-sScY&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">4. Create sliders from galleries</a>
+      <a href="http://bqworks.net/slider-pro/screencasts/#adding-thumbnails" target="_blank">4. Adding thumbnails</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=LVvn-hv0A88&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">5. Adding thumbnails</a>
+      <a href="http://bqworks.net/slider-pro/screencasts/#adding-layers" target="_blank">5. Adding layers</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=3jS0k7ArKOw&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">6. Adding layers</a>
+      <a href="http://bqworks.net/slider-pro/screencasts/#custom-css" target="_blank">6. Adding custom CSS</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=y_XeEjplSdo&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">7. Adding custom CSS</a>
+      <a href="http://bqworks.net/slider-pro/screencasts/#working-with-breakpoints" target="_blank">7. Working with breakpoints</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=LKcpUz6K70w&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">8. Working with breakpoints</a>
-    </li>
-    <li>
-      <a href="https://www.youtube.com/watch?v=CoBpGNGj3G8&list=PLh-6IaZNuPo4MHvfzrTovXRuU7WKXkfWh" target="_blank">9. Import and Export sliders</a>
+      <a href="http://bqworks.net/slider-pro/screencasts/#import-export" target="_blank">8. Import and Export sliders</a>
     </li>
   </ul>
 
