--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -11,7 +11,7 @@
     Slider Pro - by
     <a href="http://bqworks.net/">bqworks</a>
   </h1>
-  <p> <em><strong>Version 4.7</strong></em> 
+  <p> <em><strong>Version 4.7.0</strong></em> 
   </p>
   <p>Hi!</p>
   <p>
@@ -37,13 +37,10 @@
       <a href="http://bqworks.net/slider-pro/screencasts/#adding-layers" target="_blank">5. Adding layers</a>
     </li>
     <li>
-      <a href="http://bqworks.net/slider-pro/screencasts/#custom-css" target="_blank">6. Adding custom CSS</a>
+      <a href="http://bqworks.net/slider-pro/screencasts/#working-with-breakpoints" target="_blank">6. Working with breakpoints</a>
     </li>
     <li>
-      <a href="http://bqworks.net/slider-pro/screencasts/#working-with-breakpoints" target="_blank">7. Working with breakpoints</a>
-    </li>
-    <li>
-      <a href="http://bqworks.net/slider-pro/screencasts/#import-export" target="_blank">8. Import and Export sliders</a>
+      <a href="http://bqworks.net/slider-pro/screencasts/#import-export" target="_blank">7. Import and Export sliders</a>
     </li>
   </ul>
 
@@ -487,9 +484,7 @@
 
   <h2 id="custom-css-and-javascript">2. Custom CSS and JavaScript</h2>
   <p>
-    Sometimes you want to change the look of the slider or add new functionality, and for this you can use custom CSS and/or custom JavaScript. All your custom code needs to be added in the
-    <i>Slider Pro -> Custom CSS & JS</i>
-    page.
+    Sometimes you want to change the look of the slider or add new functionality, and for this you can use custom CSS and/or custom JavaScript. As of version <i>4.7.0</i>, doesn't provide an editor for custom CSS or JavaScript. Instead you will have to add the code in the WordPress' built-in CSS editor, in the Customize page, or a different place.
   </p>
 
   <h3 id="custom-css">2.1. Custom CSS</h3>
@@ -511,13 +506,6 @@
     .
   </p>
   <p>
-    After you assigned a custom class to the slider, you can use it in the
-    <i>Custom CSS</i>
-    field, to target that specific slider.
-  </p>
-  <a href="assets/images/custom-css.png">
-    <img src="assets/images/custom-css.png"></a>
-  <p>
     You could use a general selector, like
     <i>.slider-pro</i>
     if you want to target all your slider instances.
@@ -527,8 +515,6 @@
   <p>
     Just like with custom CSS, you need to assign a custom class to the slider and then use it in your custom code to target that specific slider.
   </p>
-  <a href="assets/images/custom-js.png">
-    <img src="assets/images/custom-js.png"></a>
   <p>
     The next chapter offers a presentation of the slider's JavaScript API, which allows you to programatically control the slider. Using this API requires some programming knowledge and familiarity with jQuery.
   </p>
@@ -725,35 +711,6 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
       <td>Triggered when the thumbnail scroller has moved.</td>
     </tr>
   </table>
-
-  <h3 id="loading-custom-code-in-files">2.4. Loading custom code in files</h3>
-  <p>
-    By default, the code will be loaded inline, not in a
-    <i>.css</i>
-    or
-    <i>.js</i>
-    file, because it's simpler from a technical perspective and it's also more appropriate for small snippets of code. However, if you want to add large amounts of custom CSS or JavaScript, it's better to have the code loaded in files, rather than inline.
-  </p>
-  <p>
-    You can set how custom code is loaded in the
-    <i>Slider Pro -> Plugin Settings</i>
-    page. Then, you need to re-save the custom CSS and/or JavaScript and the plugin will automatically create the
-    <i>sliderpro-custom</i>
-    folder inside
-    <i>wp-plugins</i>
-    and then
-    <i>custom.css</i>
-    and
-    <i>custom.js</i>
-    inside
-    <i>sliderpro-custom</i>
-    . You might also be prompted to provide FTP credentials if the files can't be created due to folder permission issues (this is one of the reasons why it's simpler to load the code inline).
-  </p>
-  <p>
-    The files for the custom code are saved outside the main
-    <i>sliderpro</i>
-    folder in order to avoid the removal of the code when the plugin is updated.
-  </p>
 
   <h2 id="import-and-export-sliders">3. Import and export sliders</h2>
 
@@ -1706,7 +1663,7 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
         </ul>
       </li>
       <li>
-        <a href="#custom-css-and-javascript">2. Custom CSS and JavasSript</a>
+        <a href="#custom-css-and-javascript">2. Custom CSS and JavaScript</a>
         <ul class="submenu">
           <li>
             <a href="#custom-css">2.1. Custom CSS</a>
@@ -1716,9 +1673,6 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
           </li>
           <li>
             <a href="#javascript-api">2.3. JavaScript API</a>
-          </li>
-          <li>
-            <a href="#loading-custom-code-in-files">2.4. Loading custom code in files</a>
           </li>
         </ul>
       </li>
