change http to https for the website URL

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -9,7 +9,7 @@
 <body>
   <h1>
     Slider Pro - by
-    <a href="http://bqworks.net/">bqworks</a>
+    <a href="https://bqworks.net/">bqworks</a>
   </h1>
   <p> <em><strong>Version 4.7.8</strong></em> 
   </p>
@@ -22,25 +22,25 @@
   </p>
   <ul class="video-tutorials-list">
     <li>
-      <a href="http://bqworks.net/slider-pro/screencasts/#simple-slider" target="_blank">1. Create and publish sliders</a>
+      <a href="https://bqworks.net/slider-pro/screencasts/#simple-slider" target="_blank">1. Create and publish sliders</a>
     </li>
     <li>
-      <a href="http://bqworks.net/slider-pro/screencasts/#slider-from-posts" target="_blank">2. Create sliders from posts</a>
+      <a href="https://bqworks.net/slider-pro/screencasts/#slider-from-posts" target="_blank">2. Create sliders from posts</a>
     </li>
     <li>
-      <a href="http://bqworks.net/slider-pro/screencasts/#slider-from-gallery" target="_blank">3. Create sliders from galleries</a>
+      <a href="https://bqworks.net/slider-pro/screencasts/#slider-from-gallery" target="_blank">3. Create sliders from galleries</a>
     </li>
     <li>
-      <a href="http://bqworks.net/slider-pro/screencasts/#adding-thumbnails" target="_blank">4. Adding thumbnails</a>
+      <a href="https://bqworks.net/slider-pro/screencasts/#adding-thumbnails" target="_blank">4. Adding thumbnails</a>
     </li>
     <li>
-      <a href="http://bqworks.net/slider-pro/screencasts/#adding-layers" target="_blank">5. Adding layers</a>
+      <a href="https://bqworks.net/slider-pro/screencasts/#adding-layers" target="_blank">5. Adding layers</a>
     </li>
     <li>
-      <a href="http://bqworks.net/slider-pro/screencasts/#working-with-breakpoints" target="_blank">6. Working with breakpoints</a>
+      <a href="https://bqworks.net/slider-pro/screencasts/#working-with-breakpoints" target="_blank">6. Working with breakpoints</a>
     </li>
     <li>
-      <a href="http://bqworks.net/slider-pro/screencasts/#import-export" target="_blank">7. Import and Export sliders</a>
+      <a href="https://bqworks.net/slider-pro/screencasts/#import-export" target="_blank">7. Import and Export sliders</a>
     </li>
   </ul>
 
@@ -769,7 +769,7 @@ $( '.my-slider' ).on( 'gotoSlide', function( event ) {
     [/sliderpro_slide]
     [sliderpro_slide]
         [sliderpro_slide_element name="main_image_source"] path/to/image.jpg [/sliderpro_slide_element]
-        [sliderpro_slide_element name="main_image_link"] http://bqworks.net/sliderpro/ [/sliderpro_slide_element]
+        [sliderpro_slide_element name="main_image_link"] https://bqworks.net/sliderpro/ [/sliderpro_slide_element]
         [sliderpro_slide_element name="layer" position="center" show_transition="right"] some layer content [/sliderpro_slide_element]
     [/sliderpro_slide]
 [/sliderpro]
