--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -11,7 +11,7 @@
     Slider Pro - by
     <a href="https://bqworks.net/">bqworks</a>
   </h1>
-  <p> <em><strong>Version 4.7.8</strong></em> 
+  <p> <em><strong>Version 4.8.0</strong></em> 
   </p>
   <p>Hi!</p>
   <p>
@@ -484,7 +484,7 @@
 
   <h2 id="custom-css-and-javascript">2. Custom CSS and JavaScript</h2>
   <p>
-    Sometimes you want to change the look of the slider or add new functionality, and for this you can use custom CSS and/or custom JavaScript. As of version <i>4.7.0</i>, the plugin doesn't provide an editor for custom CSS or JavaScript. Instead you will have to add the code in the WordPress' built-in CSS editor, in the Customize page, or a different place.
+    Sometimes you want to change the look of the slider or add new functionality, and for this you can use the "Custom CSS and JS" premium add-on, which is optimized to load the custom code only on pages where there are published sliders. The add-on also features syntax highlighting code editors and a revisions system that will save all code edits and allow you to compare and restore revisions.
   </p>
 
   <h3 id="custom-css">2.1. Custom CSS</h3>
